Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41419

QWebView does not properly grab the mouse

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.4.0 RC
    • 5.2.1, 5.3.1, 5.3.2, 5.4.0 Alpha
    • WebKit
    • None
    • Ubuntu 14.04, 64 bit
    • 701f6590a70695743f03423814530c5feb0173bf

      If you are selecting some text within the QWebView, and while you're selecting it you move the mouse cursor outside of the window and then back inside, the cursor is not grabbed. Moving the mouse has no effect, and you need to stop selecting and start again.

      To reproduce, create an empty Qt project, with a MainWindow and a QWebView.
      Initialize the content of the QWebView:

      ui->webView->setHtml("<html><head></head><body>Start selecting me, then go outside the window and come back</body></html>");

      Then start the application, and begin to select the text. While still holding down the mouse button move the cursor outside of the window and then back in. You’ll see that the mouse is not "captured" anymore.

      It works if you stay within the window, but as soon as you go out, the grab is lost.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            daniele Daniele Di Sarli
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes