Source/WebKit/qt/WebCoreSupport/QWebPageAdapter.h
@@ -391,6 +391,7 @@ public:
     QBasicTimer tripleClickTimer;
 
     bool clickCausedFocus;
+    bool mousePressed;
     bool m_useNativeVirtualKeyAsDOMKey;
     quint64 m_totalBytes;
     quint64 m_bytesReceived;
